include(CTest)
include(Catch)

add_library(catch_main STATIC catch_main.cpp)
target_link_libraries(catch_main Catch2::Catch2)

add_executable(test_core test_core.cpp)
target_link_libraries(test_core catch_main xci-core)
catch_discover_tests(test_core)
install(TARGETS test_core EXPORT xcikit DESTINATION tests)

add_executable(test_geometry test_geometry.cpp)
target_link_libraries(test_geometry catch_main xci-core)
catch_discover_tests(test_geometry)
install(TARGETS test_geometry EXPORT xcikit DESTINATION tests)

add_executable(test_eventloop test_eventloop.cpp)
target_link_libraries(test_eventloop catch_main xci-core)
catch_discover_tests(test_eventloop)
install(TARGETS test_eventloop EXPORT xcikit DESTINATION tests)

add_executable(test_chunked_stack test_chunked_stack.cpp)
target_link_libraries(test_chunked_stack catch_main xci-core)
catch_discover_tests(test_chunked_stack)
install(TARGETS test_chunked_stack EXPORT xcikit DESTINATION tests)

add_executable(test_argparser test_argparser.cpp)
target_link_libraries(test_argparser catch_main xci-core)
catch_discover_tests(test_argparser)
install(TARGETS test_argparser EXPORT xcikit DESTINATION tests)

if (XCI_DATA)
    add_executable(test_data test_data.cpp)
    target_link_libraries(test_data catch_main xci-data)
    catch_discover_tests(test_data)
    install(TARGETS test_data EXPORT xcikit DESTINATION tests)

    add_executable(test_data_binary test_data_binary.cpp)
    target_link_libraries(test_data_binary catch_main xci-data)
    catch_discover_tests(test_data_binary)
    install(TARGETS test_data_binary EXPORT xcikit DESTINATION tests)

    add_executable(test_coding test_coding.cpp)
    target_link_libraries(test_coding catch_main xci-data)
    catch_discover_tests(test_coding)
    install(TARGETS test_coding EXPORT xcikit DESTINATION tests)
endif()

if (XCI_SCRIPT)
    add_executable(test_script test_script.cpp)
    target_link_libraries(test_script catch_main xci-script)
    catch_discover_tests(test_script)
    install(TARGETS test_script EXPORT xcikit DESTINATION tests)
endif()

if (XCI_GRAPHICS)
    add_executable(test_graphics test_graphics.cpp)
    target_link_libraries(test_graphics catch_main xci-graphics)
    catch_discover_tests(test_graphics)
    install(TARGETS test_graphics EXPORT xcikit DESTINATION tests)
endif()

if (XCI_WIDGETS)
    add_executable(test_widgets test_widgets.cpp)
    target_link_libraries(test_widgets catch_main xci-widgets xci-text xci-graphics)
    catch_discover_tests(test_widgets)
    install(TARGETS test_widgets EXPORT xcikit DESTINATION tests)
endif()
